# simple-backup-tool

./: .gitignore  .gitingore  CHANGELOG.md  LICENSE  README.md  app_config.py  archiver.py  backup.py  clean.py  cloud_tools.py  config.py  encryptor.py  gui.py  logger.py  main.py  manage.py  miscellaneous.py  packer.py  properties.py  pyproject.toml  restore.py  runtime_data.py  schema.py  server.py  tools.py
archive/: __init__.py
archive/internal/: __init__.py  bz2_archiver.py  gz_archiver.py  zip.py  zip_archiver.py
cloud/: __init__.py  authenticate.py  clean.py  drive.py
core/: core.py  properties.py
core/modules/cloud/: __init__.py  authenticate.py  clean.py
core/modules/encryption/: __init__.py  aes.py  chacha20.py  chacha20poly1305.py
core/modules/packer/: __init__.py  pack.py
core/tools/: events.py  get_input.py
encryption/: __init__.py  aes.py  chacha20.py  chacha20poly1305.py  keygen.py
miscellaneous/: events.py  get_input.py  miscellaneous.py  singleton.py
packer/: pack.py  packconfig.py  tools.py  unpack.py
src/: logger.py  main.py  paths.py  properties.py
src/chain/: __init__.py  backup.py  restore.py  test.py
src/core/: app_config.py  cli.py  config_registry.py  context.py  manage.py  module.py  pack.py  schema.py  vfs.py
src/modules/: __init__.py
src/modules/archiver_internal/: __init__.py  backend.py  body.py
src/modules/cloud/: __init__.py  body.py
src/modules/cloud_google_drive/: __init__.py  body.py  drive.py  tools.py
src/modules/cryptography/: __init__.py  body.py  encryption.py  encryption_backend.py  keygen.py  (+2 more)
(+12 files in other folders)
